--- a/CSS/module.css
+++ b/CSS/module.css
@@ -1,7 +1,7 @@
 /*This is for fonts and colors*/
   header {
-    background: url("../images/background3.jpg") no-repeat center center fixed;
-  background-position: top;
+    background: url("../images/NAME\ AND\ SIGIL\ GRAY\ KRIS\ SKELTON\ yellow\ text\ top.png") no-repeat center center fixed;
+    background-position: top;
   }
   header h1 {
     font-family: "Montserrat";
@@ -12,9 +12,6 @@
   header h2 {
     text-shadow: 2px 2px 3px black;
     color: rgb(175, 175, 175);
-  }
-  #RWDtext {
-    display: none;
   }
   #header {
     display: block;
@@ -29,25 +26,6 @@
     background-color: rgba(100, 100, 100, 0.3);
   }
   h2, h3, h4, h5, h6, p {
-    font-family: "Lora", serif;
-  }
-  .disc {
-    border-radius: 100%;
-    width: 17em;
-    height: 17em;
-    box-shadow: -10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  }
-  .container {
-    background-color: #898989;
-  }
-  .horizontal .progress-track {
-    background-color: #deaf5d;
-  }
-  .horizontal .progressFill {
-    background-color: #435c78;
-    border-top-right-radius: 0.3em;
-    border-bottom-right-radius: 0.3em;
-    color: #fff;
     font-family: "Lora", serif;
   }
   footer {
