--- a/CSS/typography.css
+++ b/CSS/typography.css
@@ -1,5 +1,5 @@
 @font-face {
-font-family: 'Montserrat', sans-serif, 'Lora' serif;
+font-family: 'Montserrat', sans-serif, 'Lora', serif;
 }
 @font-face {
 	font-family: 'icomoon';
