--- a/css/panels.css
+++ b/css/panels.css
@@ -60,9 +60,6 @@
   text-shadow:0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
   font-size: 2em;
 }
-/* .panel p:nth-child(2) {
-  font-size: 4em;
-} */
 
 .panel.open {
   flex-grow: 3;
@@ -149,7 +146,7 @@
   transform: translateY(125%);
 }
 .panel.open-active.panel3 > a {
-  transition: transform 0.5s;
+  transition: transform .75s;
   border-radius: 50%;
 }
 
@@ -182,7 +179,7 @@
 }
 
 
-.panel.open-active.panel4 {
+/* .panel.open-active.panel4 {
   transform-origin: left;
   width: 500px;
 }
@@ -193,4 +190,4 @@
 .panel4 > a:last-of-type {
   background-image: url(../assets/thingiverse.jpg);
   background-size: 100px;
-}
+} */
